Converted_Images_to_WebP_for_Better_Optimization

--- a/website/codeOfconduct.html
+++ b/website/codeOfconduct.html
@@ -24,14 +24,14 @@
                 <!-- </div> -->
             </button>
             <button id="defaultButton" onclick="systemDefault()">
-                <img src="web_images/settings.png" class="copy" id="default">
+                <img src="web_images/settings.webp" class="copy" id="default">
             </button>
         </div>
     </div>
-    <button class="top" id="top" onclick="topFunction()"><img src="web_images/top.png" alt=""></button>
+    <button class="top" id="top" onclick="topFunction()"><img src="web_images/top.webp" alt=""></button>
     <nav id="navbar">
         <img src="web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
-        <img src="web_images/3d_glow.png" alt="Dataverse Logo" class="logo" id="glow">
+        <img src="web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
         <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
     </nav>
     
