--- a/website/license.html
+++ b/website/license.html
@@ -20,14 +20,14 @@
                 <img src="https://cdn-icons-png.freepik.com/256/467/467619.png?semt=ais_hybrid" alt="" class="copy" id="sun">
             </button>
             <button id="defaultButton" onclick="systemDefault()">
-                <img src="web_images/settings.png" class="copy" id="default">
+                <img src="web_images/settings.webp" class="copy" id="default">
             </button>
             
         </div>
     </div>
     <nav id="navbar">
         <img src="web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
-        <img src="web_images/3d_glow.png" alt="Dataverse Logo" class="logo" id="glow">
+        <img src="web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
     </nav>
     
     <button class="burger" id="burger" onclick="show()"></button>
