--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <style>
         body {
             background: linear-gradient(to bottom, #4facfe, #00f2fe, #667eea, #764ba2);
@@ -27,12 +27,12 @@
 
         .login-container h2 {
             margin-bottom: 20px;
-            color: #fff;
+            color: #000000;
             text-align: center;
         }
 
         .form-label {
-            color: #fff;
+            color: #000000;
             margin-bottom: 5px;
             text-align: left;
             display: block;
@@ -49,30 +49,30 @@
         }
 
         .form-text {
-            color: #fff;
+            color: #000000;
             font-size: 12px;
             text-align: left;
         }
 
-        .btn-primary {
+        .btn-primary, .btn-secondary {
             background-color: #f7b42c;
             background-image: linear-gradient(315deg, #f7b42c 0%, #fc575e 74%);
             border: none;
             padding: 10px;
             border-radius: 20px;
             width: 100%;
-            color: #fff;
+            color: #000000;
             font-size: 16px;
             cursor: pointer;
             transition: background 0.3s ease;
         }
 
-        .btn-primary:hover {
+        .btn-primary:hover, .btn-secondary:hover {
             background-image: linear-gradient(315deg, #fc575e 0%, #f7b42c 74%);
         }
 
         .login-container a {
-            color: #fff;
+            color: #000000;
             text-decoration: none;
         }
 
@@ -81,31 +81,30 @@
         }
 
         .login-container p {
-            color: #fff;
+            color: #000000;
             margin-top: 10px;
         }
     </style>
 </head>
 
 <body>
-    <div style="text-align: right; margin: 10px;">
-        <a href="index.html" class="btn btn-secondary" style="width: 150px; position: relative; right: 1330px;">Back to Home</a>
-    </div>
-    
-<div class="login-container">
-        <h2 style="text-align: center;">Login</h2>
+    <div class="login-container">
+        <h2>Login</h2>
         <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label" style="text-align: left;">Email address</label>
+            <label for="exampleFormControlInput1" class="form-label">Email address</label>
             <input type="email" class="form-control" id="emailInput" placeholder="name@example.com">
         </div>
         <div class="mb-3">
-            <label for="inputPassword5" class="form-label" style="text-align: left;">Password</label>
+            <label for="inputPassword5" class="form-label">Password</label>
             <input type="password" id="passwordInput" class="form-control" aria-describedby="passwordHelpBlock">
             <div id="passwordHelpBlock" class="form-text">
                 Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
             </div>
         </div>
         <button type="button" class="btn btn-primary" id="loginButton">Login</button>
+        <div class="back-to-home" style="margin-top: 10px;">
+            <a href="index.html" class="btn btn-secondary">Back to Home</a>
+        </div>
         <div style="text-align: center; margin-top: 10px;">
             <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
             <p><a href="#">Forgot Password?</a></p>
@@ -116,15 +115,18 @@
             const emailInput = document.getElementById('emailInput');
             const passwordInput = document.getElementById('passwordInput');
             const emailValue = emailInput.value.trim();
-    const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
-    if (!emailRegex.test(emailValue)) {
-      alert('Invalid email address');
-      return;
-    }
+            const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+
+            if (!emailRegex.test(emailValue)) {
+                alert('Invalid email address');
+                return;
+            }
+
             emailInput.value = '';
             passwordInput.value = '';
+
             // Redirect to index.html
-            window.location.href = '/index.html';
+            window.location.href = 'index.html';
             alert('Login successful!');
         });
     </script>
