--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
             </button>
         </div>
             <button id="defaultButton" onclick="systemDefault()">
-                <img src="website/web_images/settings.png" class="copy" id="default">
+                <img src="website/web_images/settings.webp" class="copy" id="default">
             </button>
     </div>
-    <button class="top" id="top" onclick="topFunction()"><img src="website/web_images/top.png" alt=""></button>
+    <button class="top" id="top" onclick="topFunction()"><img src="website/web_images/top.webp" alt=""></button>
     <nav id="navbar">
         <img src="website/web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
-        <img src="website/web_images/3d_glow.png" alt="Dataverse Logo" class="logo" id="glow">
+        <img src="website/web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
         <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
         <button style="
         background-color: dimgray;
@@ -170,14 +170,14 @@
             </p>
         </div>
         <div class="about_right">
-            <img src="website/web_images/about_up.png" class="preview up">
-            <img src="website/web_images/about_down.png" class="preview down">
+            <img src="website/web_images/about_up.webp" class="preview up">
+            <img src="website/web_images/about_down.webp" class="preview down">
         </div>
     </div>
     <div class="section" id="finance">
         <div class="finance_left">
-            <img src="website/web_images/finance_up.png" class="preview up">
-            <img src="website/web_images/finance_down.png" class="preview down">
+            <img src="website/web_images/finance_up.webp" class="preview up">
+            <img src="website/web_images/finance_down.webp" class="preview down">
         </div>
         <div class="finance_right">
             <p class="subheading">Track Finances!</p>
@@ -264,13 +264,13 @@
                 </button></a>
         </div>
         <div class="develop_right">
-            <img src="website/web_images/develop_up.png" class="preview up">
-            <img src="website/web_images/develop_down.png" class="preview down">
+            <img src="website/web_images/develop_up.webp" class="preview up">
+            <img src="website/web_images/develop_down.webp" class="preview down">
         </div>
     </div>
     <div class="design_line"></div>
     <footer>
-        <img src="website/web_images/cubes.png" class="cubes">
+        <img src="website/web_images/cubes.webp" class="cubes">
         <div class="contact">
             <div class="name">
                 <img src="website/web_images/2dlogo.svg" alt="" class="end-logo">
