--- a/signup.html
+++ b/signup.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
-            background: linear-gradient(to bottom, #4facfe, #00f2fe, #667eea, #764ba2);
+            background-color: #f5f7fa;
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            position: relative; /* For positioning the back button */
         }
 
         .back-to-home {
@@ -24,87 +23,62 @@
         }
 
         .back-to-home a {
-            color: #000000;
+            color: #fff;
             text-decoration: none;
             font-weight: bold;
             padding: 10px 20px;
             border-radius: 20px;
-            background-color: #f7b42c;
-            background-image: linear-gradient(315deg, #f7b42c 0%, #fc575e 74%);
+            background-color: #f953c6;
+            background-image: linear-gradient(135deg, #f953c6 0%, #b91d73 100%);
             transition: background 0.3s ease;
         }
 
         .back-to-home a:hover {
-            background-image: linear-gradient(315deg, #fc575e 0%, #f7b42c 74%);
+            background-image: linear-gradient(135deg, #b91d73 0%, #f953c6 100%);
         }
 
         .login-container {
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 20px;
-            padding: 20px 40px;
-            width: 460px;
-            backdrop-filter: blur(10px);
-            box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
+            max-width: 500px;
+            width: 100%;
+            background: #ffffff;
+            border-radius: 15px;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+            padding: 40px;
             text-align: center;
         }
 
-        .login-container h2 {
-            margin-bottom: 20px;
-            color: #000000;
-        }
-
         .form-label {
-            color: #000000;
             margin-bottom: 5px;
-            text-align: left;
-            display: block;
+            color: #333;
         }
 
         .form-control {
-            width: 100%;
+            border-radius: 30px;
             padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 20px;
-            border: none;
-            outline: none;
-            background: rgba(255, 255, 255, 0.8);
-        }
-
-        .form-text {
-            color: #000000;
-            font-size: 12px;
-            text-align: left;
+            margin-bottom: 15px;
+            border: 1px solid #ddd;
         }
 
         .btn-primary {
-            background-color: #f7b42c;
-            background-image: linear-gradient(315deg, #f7b42c 0%, #fc575e 74%);
+            background: linear-gradient(135deg, #f953c6 0%, #b91d73 100%);
             border: none;
             padding: 10px;
-            border-radius: 20px;
+            border-radius: 30px;
             width: 100%;
-            color: #000000;
+            color: white;
             font-size: 16px;
             cursor: pointer;
             transition: background 0.3s ease;
         }
 
         .btn-primary:hover {
-            background-image: linear-gradient(315deg, #fc575e 0%, #f7b42c 74%);
+            background: linear-gradient(135deg, #b91d73 0%, #f953c6 100%);
         }
 
-        .login-container a {
-            color: #000000;
-            text-decoration: none;
-        }
-
-        .login-container a:hover {
-            text-decoration: underline;
-        }
-
-        .login-container p {
-            color: #000000;
-            margin-top: 10px;
+        .error-message {
+            color: red;
+            margin-bottom: 15px;
+            display: none;
         }
     </style>
 </head>
@@ -114,71 +88,67 @@
         <a href="index.html">Back to Home</a>
     </div>
     <div class="login-container">
-        <h2 style='color:#000000'>Signup</h2>
+        <h2>Signup</h2>
+        <div id="errorContainer" class="error-message"></div> <!-- Error message container -->
         <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <label for="emailInput" class="form-label">Email address</label>
             <input type="email" class="form-control" id="emailInput" placeholder="name@example.com">
         </div>
         <div class="mb-3">
-            <label for="inputPassword5" class="form-label">Password</label>
+            <label for="passwordInput" class="form-label">Password</label>
             <input type="password" placeholder="Enter your Password" id="passwordInput" class="form-control" aria-describedby="passwordHelpBlock">
             <div id="passwordHelpBlock" class="form-text">
                 Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
             </div>
         </div>
         <div class="mb-3">
-            <label for="inputPassword5" class="form-label">Confirm Password</label>
+            <label for="confirmPasswordInput" class="form-label">Confirm Password</label>
             <input type="password" placeholder="Confirm your Password" id="confirmPasswordInput" class="form-control" aria-describedby="passwordHelpBlock">
         </div>
         <button type="button" class="btn btn-primary" id="signupButton">Signup</button>
-        <div style="text-align: center; margin-top: 10px;">
-            <p>Already have an account? <a href="login.html">Login</a></p>
+        <div style="margin-top: 15px;">
+            <p>Already have an account? <a href="login.html" style="text-decoration: none; color: #f953c6;">Login</a></p>
         </div>
     </div>
-
-    <!-- Modal -->
-    <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content" style="background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(10px);">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="successModalLabel" style="color: #fff;">Success</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body" style="color: #fff;">
-                    Your account has been created successfully!
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <script>
         document.getElementById('signupButton').addEventListener('click', function() {
             const emailInput = document.getElementById('emailInput');
             const passwordInput = document.getElementById('passwordInput');
             const confirmPasswordInput = document.getElementById('confirmPasswordInput');
+            const errorContainer = document.getElementById('errorContainer');
             const emailValue = emailInput.value.trim();
             const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
-            
-            if (!emailRegex.test(emailValue)) {
-                alert('Invalid email address');
+
+            // Trusted email domains
+            const trustedDomains = ["gmail.com", "outlook.com", "yahoo.com", "hotmail.com", "protonmail.com", "icloud.com", "tutanota.com"];
+            const emailDomain = emailValue.split('@')[1];
+
+            // Clear previous error messages
+            errorContainer.style.display = 'none';
+            errorContainer.innerHTML = '';
+
+            // Validate email format and trusted domain
+            if (!emailRegex.test(emailValue) || !trustedDomains.includes(emailDomain)) {
+                errorContainer.innerHTML = 'Please use a valid email address from trusted providers (e.g., Gmail, Outlook, Yahoo) etc.';
+                errorContainer.style.display = 'block'; // Show error message
                 return;
             }
 
+            // Check if passwords match
             if (passwordInput.value !== confirmPasswordInput.value) {
-                alert('Both Passwords do not match');
+                errorContainer.innerHTML = 'Both passwords do not match.';
+                errorContainer.style.display = 'block'; // Show error message
                 return;
             }
 
+            // Clear input fields
             emailInput.value = '';
             passwordInput.value = '';
             confirmPasswordInput.value = '';
 
-            // Show the success modal
-            const successModal = new bootstrap.Modal(document.getElementById('successModal'));
-            successModal.show();
+            // Redirect to login page
+            alert('Your account has been created successfully!');
+            window.location.href = 'login.html';
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
