UI Improvements Needed for Dataverse Website Fixes #145

--- a/index.html
+++ b/index.html
@@ -313,6 +313,10 @@
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
         <script src="website/script.js"></script>
 
+        <div id="draggableScrollBar">
+            <div id="scrollHandle"></div>
+          </div>          
+
 
 </body>
 
