--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 alt="">
             <img src="https://docs.sympy.org/latest/_images/plotting-16.png" alt="">
             <img src="website/web_images/galaxy.webp" alt="">
-            <img src="website/web_images/3d_glow.webp" alt="">
+            <img src="website/web_images/3d.gif" alt="">
 
 
         </div>
