--- a/login.html
+++ b/login.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Elegant Dark Login</title>
     <style>
         body {
-            background-color: #f5f7fa;
-            font-family: Arial, sans-serif;
+            background-color: #1c1c1c; /* Dark background */
+            font-family: 'Poppins', sans-serif;
+            color: #fff;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            position: relative;
         }
 
         .back-to-home {
@@ -24,69 +24,68 @@
         }
 
         .back-to-home a {
-            color: #fff;
+            color: #ff6a00;
             text-decoration: none;
             font-weight: bold;
             padding: 10px 20px;
-            border-radius: 20px;
-            background-color: #f953c6;
-            background-image: linear-gradient(135deg, #f953c6 0%, #b91d73 100%);
-            transition: background 0.3s ease;
+            border-radius: 30px;
+            background-color: #2a2a2a;
+            border: 2px solid #ff6a00;
+            transition: background 0.3s ease, color 0.3s ease;
         }
 
         .back-to-home a:hover {
-            background-image: linear-gradient(135deg, #b91d73 0%, #f953c6 100%);
+            background-color: #ff6a00;
+            color: #fff;
         }
 
         .login-container {
-            display: flex;
-            background: #ffffff;
-            border-radius: 15px;
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            max-width: 800px;
-            width: 100%;
-        }
-
-        .login-form {
+            width: 500px;
             padding: 40px;
-            width: 50%;
+            border-radius: 12px;
+            background-color: #2a2a2a; /* Darker container */
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.6);
         }
 
-        .welcome-section {
-            background: linear-gradient(135deg, #f953c6 0%, #b91d73 100%);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 50%;
-            color: white;
+        h2 {
             text-align: center;
-        }
-
-        .welcome-section h2 {
-            font-size: 24px;
+            font-size: 28px;
             margin-bottom: 20px;
-        }
-
-        .form-label {
-            margin-bottom: 5px;
-            color: #333;
+            color: #ff6a00; /* Accent color */
         }
 
         .form-control {
-            border-radius: 30px;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ddd;
+            background-color: #333333; /* Dark input fields */
+            border: 1px solid #444444;
+            color: #fff;
+            border-radius: 8px;
+        }
+
+        .form-control:focus {
+            background-color: #444444;
+            border: 1px solid #ff6a00; /* Accent border on focus */
+        }
+
+        /* Style for placeholder text */
+        ::placeholder {
+            color: #aaaaaa; /* Light gray placeholder */
+            opacity: 1; /* Ensures the opacity is fully applied */
+        }
+
+        :-ms-input-placeholder { /* Internet Explorer 10-11 */
+            color: #aaaaaa;
+        }
+
+        ::-ms-input-placeholder { /* Microsoft Edge */
+            color: #aaaaaa;
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #f953c6 0%, #b91d73 100%);
+            background: linear-gradient(135deg, #ff6a00 0%, #ee0979 100%);
             border: none;
-            padding: 10px;
-            border-radius: 30px;
             width: 100%;
+            padding: 10px;
+            border-radius: 8px;
             color: white;
             font-size: 16px;
             cursor: pointer;
@@ -94,72 +93,70 @@
         }
 
         .btn-primary:hover {
-            background: linear-gradient(135deg, #b91d73 0%, #f953c6 100%);
+            background: linear-gradient(135deg, #ee0979 0%, #ff6a00 100%);
         }
 
-        .additional-options {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-size: 14px;
-        }
-
-        .remember-me {
-            display: flex;
-            align-items: center;
-        }
-
-        .remember-me input {
-            margin-right: 5px;
-        }
-
-        .social-icons {
-            margin: 20px 0;
-        }
-
-        .social-icons a {
-            margin: 0 5px;
-            color: #333;
-            font-size: 18px;
+        a {
+            color: #ff6a00;
             text-decoration: none;
+        }
+
+        a:hover {
+            color: #ee0979;
+        }
+
+        .text-center {
+            margin-top: 15px;
         }
     </style>
 </head>
+
 <body>
+    <!-- Back to Home Button -->
     <div class="back-to-home">
         <a href="index.html">Back to Home</a>
     </div>
+
     <div class="login-container">
-        <div class="login-form">
-            <h2>Sign In</h2>
-            <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-            </div>
-            <div class="mb-3">
-                <label for="usernameInput" class="form-label">Username</label>
-                <input type="text" class="form-control" id="usernameInput" placeholder="Username">
-            </div>
-            <div class="mb-3">
-                <label for="passwordInput" class="form-label">Password</label>
-                <input type="password" class="form-control" id="passwordInput" placeholder="Password">
-            </div>
-            <div class="additional-options">
-                <div class="remember-me">
-                    <input type="checkbox" id="rememberMe">
-                    <label for="rememberMe">Remember Me</label>
-                </div>
-                <a href="#">Forgot Password?</a>
-            </div>
-            <button type="button" class="btn btn-primary">Sign In</button>
+        <h2>Login</h2>
+        <div class="mb-3">
+            <label for="emailInput" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="emailInput" placeholder="name@example.com">
         </div>
-        <div class="welcome-section">
-            <h2>Welcome to login</h2>
-            <p>Don't have an account?</p>
-            <a href="signup.html" class="btn btn-light" style="border-radius: 30px; padding: 10px 20px; color: #b91d73; background: white; text-decoration: none;">Sign Up</a>
+        <div class="mb-3">
+            <label for="passwordInput" class="form-label">Password</label>
+            <input type="password" class="form-control" id="passwordInput" placeholder="Password">
+            <div id="passwordHelpBlock" class="form-text" style="color: #aaa;">
+                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces or special characters.
+            </div>
+        </div>
+        <button type="button" class="btn btn-primary" id="loginButton">Login</button>
+        <div class="text-center">
+            <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+            <p><a href="#">Forgot Password?</a></p>
         </div>
     </div>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script>
+        document.getElementById('loginButton').addEventListener('click', function() {
+            const emailInput = document.getElementById('emailInput');
+            const passwordInput = document.getElementById('passwordInput');
+            const emailValue = emailInput.value.trim();
+            const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+            
+            if (!emailRegex.test(emailValue)) {
+                alert('Invalid email address');
+                return;
+            }
+
+            emailInput.value = '';
+            passwordInput.value = '';
+            alert('Login successful!');
+            // Simulate a login and redirect
+            window.location.href = '/index.html';
+        });
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
