--- a/signup.html
+++ b/signup.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Elegant Dark Signup</title>
     <style>
         body {
-            background-color: #f5f7fa;
-            font-family: Arial, sans-serif;
+            background-color: #1c1c1c; /* Dark background */
+            font-family: 'Poppins', sans-serif;
+            color: #fff;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -23,48 +24,68 @@
         }
 
         .back-to-home a {
-            color: #fff;
+            color: #ff6a00;
             text-decoration: none;
             font-weight: bold;
             padding: 10px 20px;
-            border-radius: 20px;
-            background-color: #f953c6;
-            background-image: linear-gradient(135deg, #f953c6 0%, #b91d73 100%);
-            transition: background 0.3s ease;
+            border-radius: 30px;
+            background-color: #2a2a2a;
+            border: 2px solid #ff6a00;
+            transition: background 0.3s ease, color 0.3s ease;
         }
 
         .back-to-home a:hover {
-            background-image: linear-gradient(135deg, #b91d73 0%, #f953c6 100%);
+            background-color: #ff6a00;
+            color: #fff;
         }
 
         .login-container {
-            max-width: 500px;
-            width: 100%;
-            background: #ffffff;
-            border-radius: 15px;
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+            width: 500px;
             padding: 40px;
-            text-align: center;
+            border-radius: 12px;
+            background-color: #2a2a2a; /* Darker container */
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.6);
         }
 
-        .form-label {
-            margin-bottom: 5px;
-            color: #333;
+        h2 {
+            text-align: center;
+            font-size: 28px;
+            margin-bottom: 20px;
+            color: #ff6a00; /* Accent color */
         }
 
         .form-control {
-            border-radius: 30px;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ddd;
+            background-color: #333333; /* Dark input fields */
+            border: 1px solid #444444;
+            color: #fff;
+            border-radius: 8px;
+        }
+
+        .form-control:focus {
+            background-color: #444444;
+            border: 1px solid #ff6a00; /* Accent border on focus */
+        }
+
+        /* Style for placeholder text */
+        ::placeholder {
+            color: #ee7359 ; /* Light gray placeholder */
+            opacity: 1; /* Ensures the opacity is fully applied */
+        }
+
+        :-ms-input-placeholder { /* Internet Explorer 10-11 */
+            color: #aaaaaa;
+        }
+
+        ::-ms-input-placeholder { /* Microsoft Edge */
+            color: #aaaaaa;
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #f953c6 0%, #b91d73 100%);
+            background: linear-gradient(135deg, #ff6a00 0%, #ee0979 100%);
             border: none;
-            padding: 10px;
-            border-radius: 30px;
             width: 100%;
+            padding: 10px;
+            border-radius: 8px;
             color: white;
             font-size: 16px;
             cursor: pointer;
@@ -72,85 +93,80 @@
         }
 
         .btn-primary:hover {
-            background: linear-gradient(135deg, #b91d73 0%, #f953c6 100%);
+            background: linear-gradient(135deg, #ee0979 0%, #ff6a00 100%);
         }
 
-        .error-message {
-            color: red;
-            margin-bottom: 15px;
-            display: none;
+        a {
+            color: #ff6a00;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: #ee0979;
+        }
+
+        .text-center {
+            margin-top: 15px;
         }
     </style>
 </head>
 
 <body>
+    <!-- Back to Home Button -->
     <div class="back-to-home">
         <a href="index.html">Back to Home</a>
     </div>
+
     <div class="login-container">
         <h2>Signup</h2>
-        <div id="errorContainer" class="error-message"></div> <!-- Error message container -->
         <div class="mb-3">
             <label for="emailInput" class="form-label">Email address</label>
             <input type="email" class="form-control" id="emailInput" placeholder="name@example.com">
         </div>
         <div class="mb-3">
             <label for="passwordInput" class="form-label">Password</label>
-            <input type="password" placeholder="Enter your Password" id="passwordInput" class="form-control" aria-describedby="passwordHelpBlock">
-            <div id="passwordHelpBlock" class="form-text">
-                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+            <input type="password" class="form-control" id="passwordInput" placeholder="Password">
+            <div id="passwordHelpBlock" class="form-text" style="color: #aaa;">
+                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces or special characters.
             </div>
         </div>
         <div class="mb-3">
             <label for="confirmPasswordInput" class="form-label">Confirm Password</label>
-            <input type="password" placeholder="Confirm your Password" id="confirmPasswordInput" class="form-control" aria-describedby="passwordHelpBlock">
+            <input type="password" class="form-control" id="confirmPasswordInput" placeholder="Confirm Password">
         </div>
         <button type="button" class="btn btn-primary" id="signupButton">Signup</button>
-        <div style="margin-top: 15px;">
-            <p>Already have an account? <a href="login.html" style="text-decoration: none; color: #f953c6;">Login</a></p>
+        <div class="text-center">
+            <p>Already have an account? <a href="login.html">Login</a></p>
         </div>
     </div>
+
     <script>
         document.getElementById('signupButton').addEventListener('click', function() {
             const emailInput = document.getElementById('emailInput');
             const passwordInput = document.getElementById('passwordInput');
             const confirmPasswordInput = document.getElementById('confirmPasswordInput');
-            const errorContainer = document.getElementById('errorContainer');
             const emailValue = emailInput.value.trim();
             const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
-
-            // Trusted email domains
-            const trustedDomains = ["gmail.com", "outlook.com", "yahoo.com", "hotmail.com", "protonmail.com", "icloud.com", "tutanota.com"];
-            const emailDomain = emailValue.split('@')[1];
-
-            // Clear previous error messages
-            errorContainer.style.display = 'none';
-            errorContainer.innerHTML = '';
-
-            // Validate email format and trusted domain
-            if (!emailRegex.test(emailValue) || !trustedDomains.includes(emailDomain)) {
-                errorContainer.innerHTML = 'Please use a valid email address from trusted providers (e.g., Gmail, Outlook, Yahoo) etc.';
-                errorContainer.style.display = 'block'; // Show error message
+            
+            if (!emailRegex.test(emailValue)) {
+                alert('Invalid email address');
                 return;
             }
 
-            // Check if passwords match
             if (passwordInput.value !== confirmPasswordInput.value) {
-                errorContainer.innerHTML = 'Both passwords do not match.';
-                errorContainer.style.display = 'block'; // Show error message
+                alert('Both passwords must match');
                 return;
             }
 
-            // Clear input fields
             emailInput.value = '';
             passwordInput.value = '';
             confirmPasswordInput.value = '';
-
-            // Redirect to login page
+            
             alert('Your account has been created successfully!');
             window.location.href = 'login.html';
         });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
