--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                     class="table_link">Figma Design↗</a>
                 <a href="https://tejasgupta.netlify.app">Portfolio↗</a>
                 <a href="https://github.com/multiverseweb">Github Profile↗</a>
-                <a href="https://www.linkedin.com/in/tejascodes/"> Linkeldn ↗</a>
+                <a href="https://www.linkedin.com/in/tejascodes/"> LinkedIn ↗</a>
             </div>
 
         </div>
