footer text visibility

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             </div>
         </div>
         <form name="Dataverse Reviews" method="POST" data-netlify="true" onsubmit="return validateForm()">
-            <p>Let Me Know Your Thoughts!</p>
+            <p style="color:white">Let Me Know Your Thoughts!</p>
             <input type="text" name="Name" placeholder="Your Name" required>
             <input type="email" name="Email" placeholder="Your Email ID" required>
             <input name="Message" placeholder="Your Message" required>
@@ -286,10 +286,10 @@
     </footer>
     <div class="links">
         <p>
-        <h3> Designed & Developed by Tejas Gupta</h3>
+        <h3 style="color:rgb(187, 187, 187);"> Designed & Developed by Tejas Gupta</h3>
         </p>
         <br>
-        <h4>Copyright &copy; <span id="copyright">32949832</span> Tejas Gupta</h4>
+        <h4 style="color:rgb(177, 177, 177);">Copyright &copy; <span id="copyright">32949832</span> Tejas Gupta</h4>
         <div class="end_line"></div>
         <div class="small">
             <div class="link_class">
