Fixed header styling

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        /* CSS for responsive design */
+        @media (max-width: 425px) {
+            #logoname {
+                display: none;
+            }
+        }
+    </style>
 </head>
 
 <body id="body">
@@ -64,19 +72,22 @@
     <nav id="navbar">
         <img src="website/web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="website/web_images/3d_glow.png" alt="Dataverse Logo" class="logo" id="glow">
+        <h2 style="
+        position: relative;
+        left: 60px;
+        top: 15px;" id="logoname">Dataverse</h2>
         <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
         <button style="
         background-color: dimgray;
         position: relative;
-        left: 1300px;
-        top: 8px;
+        left: 1240px;
+        top: -18px;
         height: 40px;
         width: 130px; 
         font-size: 17px;
         border: none;
         border-radius: 10px;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-
         "><a href="login.html">Login/Signup</a>
         </button>
     </nav>
